--- a/THESIS/02-automata.Rmd
+++ b/THESIS/02-automata.Rmd
@@ -137,7 +137,7 @@ The usual strategy to prove that a given CA is universal is to show its equivale
 
 On the other hand possessing the same power as a conventional digital computer plays an important role on our mathematical ability to make predictions on the behavior of CA, because all universal computers require resources in the same order of magnitude to process a particular algorithm, thus in general a computational shortcut to the simulation of any universal CA does not exist [@toffoli1977cellular]. This implies that even if an analytical expression for exactly capturing the evolution of a universal CA is obtained, evaluating such expression would take asymptotically the same time as just running the CA and observing its own evolution. Thus remarkably the most efficient way to characterize a universal CA is through its own simulation [@ilachinski2001cellular]. 
 
-To Do: Add explanation using the _Halting Problem_.
+A different explanation of why, in general, there is not an analytical expression to predict, for any time step $t$ the grid configuration of a universal CA, is by means of the _Halting Problem_, which it is known to be _undeciadable_ [@turing1936computable]. Thus if a CA it is taken as a running program there is no general way of knowing if it would _halt_, with the meaning of _halting_, for this case, being that the CA would reach any configuration that signals the results of the computations.
 
 Furthermore locality being one of the main ingredients of CA imposes an almost independent update on each cell that is only influenced by its neighbors. As the execution of the program by the CA is being carried out individually by its cells the computations are being executed in a fully parallel manner. Consequently simulations on CA allow for efficient parallel implementations of any real world system that can be codified into the CA formalism. For example CA based machines CAMs (CA Machines) have been proposed by Toffoli and others [@toffoli1984cam]. A hardware implementation of a CAM was developed at MIT [@margolus1995cam] that for the modeling of complex systems it could achieve a performance of several orders of magnitude higher that a traditional computer at a comparable cost.
 
