--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -446,3 +446,13 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   journal={arXiv preprint arXiv:1412.6980},
   year={2014}
 }
+
+@article{turing1936computable,
+  title={On computable numbers, with an application to the Entscheidungsproblem},
+  author={Turing, Alan Mathison},
+  journal={J. of Math},
+  volume={58},
+  number={345-363},
+  pages={5},
+  year={1936}
+}
